--- a/Index.html
+++ b/Index.html
@@ -1,94 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <script src="https://kit.fontawesome.com/cb5d0266c5.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/c4c2622728.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&family=Patrick+Hand&display=swap" rel="stylesheet">       
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav id="header" class="banner">
-    <section id="logoHeader" class="logo">
-    <h3>Delicious</h3>
-  <p>rgjhigrh</p>
-
-
-  <img src="https://place-hold.it/25x25/ddd">
-    </section>
-
-    <section id="socialMedia" class="buttons">
-  <ul>
-    <li id="link1">Filler</li>
-    <li id="link2">Filler</li>
-    <li id="link3">Filler</li>
-    <li id="link4">Filler</li>
-    <li id="link4">Filler</li>
-    <li id="link5">Filler</li>
-    <li id="link6">Filler</li>
-    <li id="link7">Filler</li>
-    <li id="link8">Filler</li>
-    </ul>
-    <hr>
-    </section>
-</nav>
-    <header>
-      <h1> Chocolate Pizza </h1>
-      <p>jghesrigasdgsrgs</p>
-      <article id="print">print</article>
-    </header>
-    <img src="https://place-hold.it/960x450/ddd" id="hero">
-  <container id="textContent">
-    <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve Halve all
-      Of the figs and toss in the saucepan With water and lemon juice. Cook over medium heat, stirring frequently, until
-      you have a chunky-jammy mixture, Add salt with one or two stirs, set aside and let cool completely</p>
-    <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
-      dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture m the fridge and wait until the
-      fig mixture is cooled.</p>
-    <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
-      instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.
-      Continue to process for +/• 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for
-      at least hours before serving.</p>
-  </container>
-  <container id="recipeBackground">
-    <section id="recipeMilk" class="recipe">
-      <ul>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-      </ul>
+    <header id="pageHeader" class="banner">
+      <section id="logoHeader" class="logo">
+        <a id="homepageLogo" class="buttons" href="#"><i class="fa-solid fa-lg fa-utensils" style="color: white"; ></i></a>
+        <div id="logoHeaderText">
+        <h1>Delicious</h1>
+        <p>THE BEST FOOD BLOG ON THE WEB.</p></div>
       </section>
-      <section id="cream" class="recipe">
-      <ul>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-        <li>Filler List</li>
-      </ul>
+      <section id="socialMedia" class="buttons">
+        <ul>
+          <li id="fb" class="links"><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
+          <li id="twitter" class="links"><a href="#" ><i class="fa-brands fa-twitter-square"></i></a></li>
+          <li id="google" class="links"><a href="#"><i class="fa-brands fa-google-plus-square"></i></a></li>
+          <li id="insta" class="links"><a href="#"><i class="fa-brands fa-instagram-square"></i></a></i></li>
+          <li id="flikr" class="links"><a href="#"><i class="fa-brands fa-flickr"></i></a></li>
+          <li id="pinterest" class="links"><a href="#"><i class="fa-brands fa-pinterest-square"></i></a></i></li>
+          <li id="rssFeed" class="links"><a href="#"><i class="fa-solid fa-square-rss"></i></a></li>
+          <li id="email" class="links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
+        </ul>
+      </section>
+    </header>
+    <hr class="rule">
+    <section id="contentHeader">
+      <article id="contentHeaderText">
+        <h2>Chocolate Pizza</h2>
+        <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
+      </article>
+      <article id="print">
+        <p><i class="fa-solid fa-print fa-sm" style="color:lightgray;"></i> PRINT</p>
+      </article>
     </section>
-</container>
-<nav>
-  <hr>
-</nav>
-<nav id="van" class="banner">
-  <h3>Author</h3>
-  <p>Bio</p>
-  <img src="https://place-hold.it/25x25/ddd">
-  <article id="share" class="button">
-  share
-  </article>
-</nav>
-<section>
-  <footer>
-    <img src="https://place-hold.it/15x15/ddd">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam doloribus laudantium alias perferendis dolor necessitatibus fuga optio omnis saepe? Deleniti sequi est facilis, culpa officia laborum saepe et distinctio maiores?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque eaque aliquam ullam laborum enim repellendus possimus reprehenderit quibusdam sed, mollitia aliquid ea quis asperiores dignissimos placeat hic id unde nulla.</p>
-  </footer>
-  </section>
+    <div id="main">
+      <img src="https://raw.githubusercontent.com/codefellows/seattle-code-201d94/main/class-10/lab-a/lab-assets/choco-pizza.png" id="hero">
+      <section id="textContent">
+        <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve Halve all
+          Of the figs and toss in the saucepan With water and lemon juice. Cook over medium heat, stirring frequently, until
+          you have a chunky-jammy mixture, Add salt with one or two stirs, set aside and let cool completely</p>
+        <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
+          dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture m the fridge and wait until the
+          fig mixture is cooled.</p>
+        <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
+          instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts.
+          Continue to process for +/• 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for
+          at least hours before serving.</p>
+      </section>
+    </div>
+      <div id="recipe">
+        <section id="Milk" class="recipeList">
+          <ul>
+            <li>1 1/2 cups milk</li>
+            <li>1/2 cup mascarpone</li>
+            <li>1/2 tsp pink salt</li>
+            <li>1 lb Black Mission figs</li>
+            <li>1/2 cup brown sugar</li>
+            <li>2-4 tbsp water</li>
+          </ul>
+          </section>
+          <section id="cream" class="recipeList">
+          <ul>
+            <li>1 1/2 cups heavy cream</li>
+            <li>1/3 granulated sugar</li>
+            <li>2 egg yolks</li>
+            <li>1 lemon, juiced</li>
+            <li>2 tbsp butter</li>
+            <li>1 cup honey roasted pecans, roughly chopped</li>
+          </ul>
+        </section>
+      </div>
+    <hr class="rule">
+    <div id="authorBio" class="banner">
+      <section id="author">
+        <img id="authorImg" src="https://raw.githubusercontent.com/codefellows/seattle-code-201d94/main/class-10/lab-a/lab-assets/van-pic.png">
+        <h3>Vanessa Stevenson</h3>
+        <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much Who I am. 
+        </p>
+      </section>
+      <article id="share" class="button">
+      SHARE RECIPE
+      </article>
+    </div>
+    <footer>
+      <hr>
+      <img src="https://raw.githubusercontent.com/codefellows/seattle-code-201d94/main/class-10/lab-a/lab-assets/small-logo.png">
+      <p>Delicious &copy 2013 - All Rights Reserved. 
+      Proudly published with Ghost.
+    </footer>
   </body>
 </html>
-//
+    
